# starting-ragchatbot-codebase

./: .gitignore  .mcp.json  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.base  README.md  docker-build.sh  docker-name.sh  frontend-changes.md  package-lock.json  package.json  pyproject.toml  run.sh
.devcontainer/: devcontainer.json  postCreateCommand.sh
backend/: ai_generator.py  app.py  rag_system.py  search_tools.py  session_manager.py  vector_store.py
backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_core_functionality.py  test_system_diagnostics.py
docs/: ARCHITECTURE.md
frontend/: index.html  script.js  style.css
scripts/: check-format.sh  format.sh  quality-check.sh
